--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Your Name</h1>
+        <h1>Kimly Mark M. Bron</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
-    </section>
+    </section>      
 
     <section id="about" class="about">
         <h2>About Me</h2>
