--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </section>      
 
     <section id="about" class="about">
-        <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <h2>About me</h2>
+        <p>I love sunset</p>
     </section>
 
     <section id="portfolio" class="portfolio">
