--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>About me</h2>
-        <p>I love Sunset</p>
+        <p>I am Com Scie Student</p>
     </section>
 
     <section id="portfolio" class="portfolio">
